--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,3 +29,13 @@ services:
       MYSQL_PASSWORD: password
     ports:
       - "3306:3306"
+  phpmyadmin:
+    depends_on:
+      - mysql
+    image: phpmyadmin
+    restart: always
+    ports:
+      - "8090:80"
+    environment:
+      PMA_HOST: mysql
+      MYSQL_ROOT_PASSWORD: root
