--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.9'
 services:
   app:
+    user: "1000:1000"
     build:
       context: ./
       dockerfile: ./docker/php/Dockerfile
@@ -33,7 +34,6 @@ services:
     depends_on:
       - mysql
     image: phpmyadmin
-    restart: always
     ports:
       - "8090:80"
     environment:
