--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -2,9 +2,6 @@ FROM php:8.2-apache
 
 RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
 
-# Set the working directory to /var/www/html
-WORKDIR /var/www/html
-
 COPY ./docker/php/php.ini /usr/local/etc/php/conf.d/php.ini
 
 # Install dependencies
@@ -32,21 +29,29 @@ RUN apt-get update && \
     && docker-php-ext-install pdo pdo_mysql zip xsl gd opcache exif mbstring soap
 
 # Enable Apache modules
-RUN a2enmod rewrite
+RUN a2enmod rewrite headers
 
 # Change the document root to the public directory
 ENV APACHE_DOCUMENT_ROOT /var/www/html/public
-
 RUN sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf
 RUN sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf
 
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
+# Change user id to fit host machine user
+RUN usermod --non-unique --uid 1000 www-data \
+  && groupmod --non-unique --gid 1000 www-data \
+  && chown -R 1000:1000 /var/www
+
+USER www-data
+
+# Install NVM for current user (www-data) and install Node.js with gulp-cli
 SHELL ["/bin/bash", "--login", "-c"]
+RUN touch ~/.bashrc
 RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
-RUN nvm install 14 && \
+RUN source ~/.bashrc && \
+    nvm install 14 && \
     npm install -g gulp-cli
 
-# Expose port 80 for Apache
-EXPOSE 80
+WORKDIR /var/www/html
