--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       MYSQL_PASSWORD: password
     ports:
       - "3306:3306"
+    restart: unless-stopped
   phpmyadmin:
     depends_on:
       - mysql
