--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,74 @@
-version: '3.9'
+# Docker Compose configuration for a Symfony project with NG specifics
+# Author: Petr Spěvák <petr@spevak.eu>
+# Boilerplate repository: https://github.com/petrspevak/docker_config_ng
+
+# Centralized configuration constants
+x-config:
+  # Database
+  db_host: &db_host mysql
+  db_port: &db_port 3306
+  db_name: &db_name database
+  db_user: &db_user user
+  db_password: &db_password password
+  db_root_password: &db_root_password password
+  
+  # phpMyAdmin
+  upload_limit: &upload_limit 1G
+  
+  # Port mappings
+  app-ports: &app-ports
+    - "8080:80"
+  mysql-ports: &mysql-ports
+    - "3306:3306"
+  phpmyadmin-ports: &phpmyadmin-ports
+    - "8090:80"
+
 services:
   app:
-    user: "1000:1000"
+    user: "${UID:-1000}:${GID:-1000}"
     build:
       context: ./
       dockerfile: ./docker/php/Dockerfile
-    ports:
-      - "8080:80"
+      args:
+        USER_ID: ${UID:-1000}
+        GROUP_ID: ${GID:-1000}
+    ports: *app-ports
     volumes:
       - .:/var/www/html
     depends_on:
       - mysql
     environment:
-      - APP_ENV=dev
-      - APP_SECRET=3bc1e76609756e82a2e3637e8ec756ee
-      - DATABASE_URL=
-      - DATABASE_HOST=mysql
-      - DATABASE_PORT=3306
-      - DATABASE_NAME=database
-      - DATABASE_USER=root
-      - DATABASE_PASSWORD=root
-      - MAILER_URL=null://localhost
+      APP_ENV: dev
+      APP_SECRET: 3bc1e76609756e82a2e3637e8ec756ee
+      DATABASE_URL: ""
+      DATABASE_HOST: *db_host
+      DATABASE_PORT: *db_port
+      DATABASE_NAME: *db_name
+      DATABASE_USER: *db_user
+      DATABASE_PASSWORD: *db_password
+      MAILER_URL: "null://localhost"
+
   mysql:
     image: mysql:8.0
     volumes:
       - mysql-data:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: database
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
-    ports:
-      - "3306:3306"
+      MYSQL_ROOT_PASSWORD: *db_root_password
+      MYSQL_DATABASE: *db_name
+      MYSQL_USER: *db_user
+      MYSQL_PASSWORD: *db_password
+    ports: *mysql-ports
     restart: unless-stopped
+
   phpmyadmin:
     depends_on:
       - mysql
     image: phpmyadmin
-    ports:
-      - "8090:80"
+    ports: *phpmyadmin-ports
     environment:
-      PMA_HOST: mysql
-      MYSQL_ROOT_PASSWORD: root
-      UPLOAD_LIMIT: 1G
+      PMA_HOST: *db_host
+      MYSQL_ROOT_PASSWORD: *db_root_password
+      UPLOAD_LIMIT: *upload_limit
+
 volumes:
   mysql-data:
